cmake_minimum_required(VERSION 4.2)
project(CPP_DSA)

set(CMAKE_CXX_STANDARD 20)

add_executable(q1 question1.cpp)
add_executable(q2 question2.cpp)
add_executable(q3 question3.cpp)
add_executable(q4 question4.cpp)
add_executable(q5 question5.cpp)
add_executable(q6 question6.cpp)
add_executable(q7 question7.cpp)